--- a/ifls_bmi.qmd
+++ b/ifls_bmi.qmd
@@ -1,7 +1,7 @@
 ---
 title: "IFLS BMI MAIHDA"
 format: 
-  html:
+  gfm:
     warning: false
     echo: false
 ---
@@ -79,7 +79,7 @@ ifls_2 <- ifls |>
          .keep = "unused")
 
 ifls_2 <- ifls_2 |> 
-  mutate(age = factor(age, c("<40",">40")),
+  mutate(age = factor(age, c("<40"," >40")),
          sex = factor(sex, c("male","female")),
          marital = factor(marital, c("not married","married")),
          urban = factor(urban, c("rural","urban")),
